* add 'multiply' Function plugin, a generalization of 'mult'  * change theta program: can run over multiple configs now, but does not accept different run setting name

--- a/Makefile.rules
+++ b/Makefile.rules
@@ -44,7 +44,7 @@ else
    ifeq ($(shell test -e /usr/lib/libboost_system-mt.so && echo -n A),A)
       BS:=-mt
    endif
-   BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS)
+   BOOST_LIBS := -lboost_filesystem$(BS) -lboost_regex$(BS) -lboost_program_options$(BS) -lboost_thread$(BS) -lboost_system$(BS) -lboost_serialization$(BS)
 endif
 
 
