* bugfix for dependency handling of database / tables via shared_ptr to ensure proper destruction order   in all circumstances

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(theta)
 set(CMAKE_VERBOSE_MAKEFILE, 1)
 
 option(coverage "build for coverage tests" OFF)
+option(profile "build for profiling" OFF)
 option(optiontest "build tests" OFF)
 option(release "build release version" ON)
 option(crlibm "use the log function from crlibm" ON)
@@ -12,6 +13,11 @@ option(psql "use postgresql" OFF)
 if(coverage)
    message(STATUS "building for coverage test")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -O0")
+elseif(profile)
+   message(STATUS "building for profiling")
+   set(CMAKE_BUILD_TYPE Release) # to enable optimizations
+   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
+   #set(CMAKE_LD_FLAGS "${CMAKE_LD_FLAGS} -pg")
 else()
   if(release)
      set(CMAKE_BUILD_TYPE Release)
