* add the root ntuple source which draws random subsets of input trees. Useful for correlation studies for analyses  * some small fixed to documentation

--- a/root/Makefile
+++ b/root/Makefile
@@ -21,7 +21,7 @@ EXTRA_LINK_EXE := $(EXTRA_LINK_SO)
 all: ../lib/root.so histos
 
 ifeq ($(OPTIONS_BUILD_TESTS),yes)
-all: create_testhistos
+all: create_testhistos create_testtree
 endif
 
 histos: .bin/histos.o
@@ -34,9 +34,6 @@ create_testhistos2: .bin/create_testhistos2.o
 	@$(LINK_EXE) -o $@ $<
 
 create_histos: .bin/create_histos.o
-	@$(LINK_EXE) -o $@ $<
-
-merge_trees: .bin/merge_trees.o
 	@$(LINK_EXE) -o $@ $<
 
 create_testtree: .bin/create_testtree.o
