* change interface of producer: produce routine does not need Run as argument  * decouple Run from theta by introducing Main which can be constructed by the plugin system  * do not load ROOT plugins in all examples in order to have a valgrind test case WITHOUT root  * add first (untested) version of fclike_ordering which makes use of the new Main abstraction

--- a/examples/CountingExp-include.cfg
+++ b/examples/CountingExp-include.cfg
@@ -78,6 +78,6 @@ b-dist = {
 
 
 options = {
-  plugin_files = ("lib/core-plugins.so", "lib/root.so");
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
 };
 
