--- a/examples/gaussoverflat-include.cfg
+++ b/examples/gaussoverflat-include.cfg
@@ -66,6 +66,6 @@ b-dist = {
             };
 
 
-options = {
+/*options = {
   plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
-};
+};*/
