--- a/examples/gaussoverflat-intervals.cfg
+++ b/examples/gaussoverflat-intervals.cfg
@@ -33,3 +33,7 @@ main = {
         filename = "gaussoverflat-intervals.db";
     };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
