--- a/examples/gaussoverflat-mcmc.cfg
+++ b/examples/gaussoverflat-mcmc.cfg
@@ -46,10 +46,13 @@ main = {
    };
    model = "@gaussoverflat";
    producers = ("@mcmc_ratio", "@mcmc_ratio2", "@minimized_ratio");
-   n-events = 50;
+   n-events = 10;
    output_database = {
         type = "sqlite_database";
         filename = "gaussoverflat-mcmc.db";
     };
 };
 
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
