--- a/examples/gaussoverflat-mcmc_quantiles.cfg
+++ b/examples/gaussoverflat-mcmc_quantiles.cfg
@@ -24,3 +24,7 @@ main = {
         filename = "gaussoverflat-mcmc_quantiles.db";
    };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so");
+};
