--- a/examples/gaussoverflat-mle.cfg
+++ b/examples/gaussoverflat-mle.cfg
@@ -32,3 +32,7 @@ main = {
         filename = "gaussoverflat-mle.db";
     };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
