--- a/examples/gaussoverflat-nll_scan.cfg
+++ b/examples/gaussoverflat-nll_scan.cfg
@@ -22,3 +22,7 @@ main = {
         filename = "gaussoverflat-nll_scan.db";
     };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
