--- a/examples/gaussoverflat-writer.cfg
+++ b/examples/gaussoverflat-writer.cfg
@@ -37,3 +37,7 @@ main = {
         filename = "gaussoverflat-writer.db";
     };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
