--- a/examples/gaussoverflat-rootfile.cfg
+++ b/examples/gaussoverflat-rootfile.cfg
@@ -42,3 +42,7 @@ main = {
         });
     };
 };
+
+options = {
+  plugin_files = ("$THETA_DIR/lib/core-plugins.so", "$THETA_DIR/lib/root.so");
+};
