* move code currently defined inline in headers "out-of-line" into cpp  * remove crlibm, use amdlibm instead  * change CMakeLists.txt to include amdlibm instead of crlibm; add llvm build support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,10 @@ set(CMAKE_VERBOSE_MAKEFILE, 1)
 
 option(coverage "build for coverage tests" OFF)
 option(profile "build for profiling" OFF)
-option(optiontest "build tests" OFF)
+option(optiontest "build tests" ON)
 option(release "build release version" ON)
-option(crlibm "use the log function from crlibm" ON)
+option(amdlibm "use amdlibm instead of libm in some places" ON)
+option(llvm "Build llvm plugins" OFF)
 option(generic "use generic implementation of funtions; not optimized, platform-specific ones" OFF)
 
 if(coverage)
@@ -27,9 +28,11 @@ else()
    endif()
 endif()
 
-if(crlibm)
-   message(STATUS "using log from crlibm")
-   add_definitions(-DUSE_CRLIBM)
+if(amdlibm)
+   message(STATUS "using amdlibm")
+   add_definitions(-DUSE_AMDLIBM)
+   find_library(amdlibm_lib NAMES amdlibm HINTS "./lib/")
+   message("amdlibm_lib: ${amdlibm_lib}")
 endif()
 
 
@@ -40,7 +43,6 @@ if(NOT generic)
       set(generic ON)
   endif()
 endif()
-   
 
 if(generic)
    message(STATUS "using generic functions")
@@ -67,6 +69,11 @@ add_subdirectory(plugins)
 add_subdirectory(libconfig)
 add_subdirectory(bin)
 add_subdirectory(root)
+
+if(llvm)
+   message(STATUS "including llvm")
+   add_subdirectory(llvm)
+endif()
 
 if(optiontest)
    message(STATUS "building tests")
