--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,5 @@
 file(GLOB libtheta_sources *.cpp)
 
-if(crlibm)
-   set(libtheta_sources ${libtheta_sources} ../crlibm/log.c)
-endif()
-
 if(generic)
    set(libtheta_sources ${libtheta_sources} log2_dot.cxx)
 else()
@@ -12,5 +8,10 @@ endif()
 
 add_library(libtheta SHARED ${libtheta_sources})
 target_link_libraries(libtheta m dl config ${Boost_LIBRARIES})
+
+if(amdlibm)
+   target_link_libraries(libtheta ${amdlibm_lib})
+endif()
+
 set_property(TARGET libtheta PROPERTY OUTPUT_NAME theta)
 
