--- a/llvm/Makefile
+++ b/llvm/Makefile
@@ -6,12 +6,11 @@ include ../Makefile.options
 include ../Makefile.rules
 
 EXTRA_COMPILE += $(shell llvm-config --cppflags)
-EXTRA_LINK_SO += $(shell llvm-config --ldflags) -lLLVM-2.7
 
 all: ../lib/llvm-plugins.so
 
 ../lib/llvm-plugins.so: $(libobjects)
-	@$(LINK_SO) -o $@ $+
+	@$(LINK_SO) -o $@ $+ $(shell llvm-config --libfiles nativecodegen engine scalaropts ipo)
 
 clean-subdir:
 	@rm -f ../lib/llvm-plugins.so
