--- a/Makefile.options
+++ b/Makefile.options
@@ -12,22 +12,19 @@ OPTIONS_BUILD_TESTS := yes
 # If yes, use amdlibm for some math functions instead of libm
 OPTIONS_USE_AMDLIBM := yes
 
-# If yes, build llvm plugins in "llvm" subdirectory. Requires working llvm installation (tested with 2.7 and 2.8)
-OPTIONS_BUILD_LLVM := yes
+# If yes, build llvm plugins in "llvm" subdirectory. Requires working
+# llvm installation (tested with 2.7 and 2.8)
+OPTIONS_BUILD_LLVM := no
 
-# if you installed boost or sqlite not system-wide but in a special location, set the installation
-# directory here. It is assumed that "include" and "lib" subdirectories exist there:
-#OPTIONS_SQLITEDIR:=/wlcg/sw/cms/experimental/slc5_ia32_gcc434/external/sqlite/3.6.10
-#OPTIONS_BOOSTDIR:=/wlcg/sw/boost/current
-
+# Additional flags for compilation / linking:
 OPTIONS_CFLAGS :=
 OPTIONS_LDFLAGS :=
 
-# Usually, theta assumes building for 64-bit x86 cpus (and an assembler compatible
-# with the one gcc uses).
-# Setting this flag to 'yes' disables some optimizations and replaces functions with generic ones.
-# Note that some platform-specific optimizations are controlled by
-# compiler-defined defines such as __SSE2__ and ignore
+# Usually, theta assumes building for 64-bit x86 cpus (and an assembler
+# compatible with the one gcc uses).
+# Setting this flag to 'yes' disables some optimizations and replaces
+# functions with generic ones. Note that some platform-specific optimizations
+# are controlled by compiler-defined defines such as __SSE2__ and ignore
 # the value given here.
 OPTIONS_GENERIC_ARCH := no
 
