--- a/Makefile.options
+++ b/Makefile.options
@@ -10,7 +10,7 @@
 OPTIONS_BUILD_TESTS := yes
 
 # If yes, use amdlibm for some math functions instead of libm
-OPTIONS_USE_AMDLIBM := yes
+OPTIONS_USE_AMDLIBM := no
 
 # If yes, build llvm plugins in "llvm" subdirectory. Requires working
 # llvm installation (tested with 2.7 and 2.8)
