* rewrite cls_limits to deal with truth-dependent test statistic; this introduces some non-compatible changes in configuration  * implement truth-dependent likelihood ratio in deltanll_hypotest  * adapt theta-utils to new cls interface; introduce ts='lhclike' option

--- a/examples/gaussoverflat-cls.cfg
+++ b/examples/gaussoverflat-cls.cfg
@@ -1,6 +1,6 @@
 @include "gaussoverflat-include.cfg"
 
-// the recommended test statistic producer for CLS upper limits for now is
+// the recommended test statistic producer for CLs upper limits for now is
 // deltanll_hypotest where the background-only-distributions fixes the signal to zero
 // and signal-plus-background either uses a flat prior.
 deltanll = {
@@ -11,7 +11,9 @@ deltanll = {
          type = "product_distribution";
          distributions=("@b-dist", "@delta-s-zero");
     };
+    //background-only-distribution = "@gaussoverflat.parameter-distribution";
     signal-plus-background-distribution = "@gaussoverflat.parameter-distribution";
+    //restrict_poi = "s";
 };
 
 delta-s-zero = {
@@ -20,21 +22,27 @@ delta-s-zero = {
 };
 
 // note: for complex models, minuit might have trouble converging. If the error rate
-// is too high (say > 5-10%, or it fails on data), consider using a chain of minimizers
-// which also include mcmc_minimizer.
+// is too high (say > 5-10%, or it fails on data), consider using a more robust minimizer, e.g., minimizer_chain
+// with a mcmc_minimizer.
 myminuit = {
    type = "root_minuit";
 };
 
+
+// note that the progress displayed by cls_limits is different from other methods: it does not include a
+// 'total' number as this is not known and very hard to estimate.
 main = {
    type = "cls_limits";
-   producers = ("@deltanll");
+   producer = "@deltanll";
    model = "@gaussoverflat";
    output_database = {
         type = "sqlite_database";
         filename = "gaussoverflat-cls.db";
     };
     minimizer = "@myminuit";
+    rnd_gen = {
+        seed = 1989210211;
+    };
     
     // the name of the test statistic column:
     ts_column = "deltanll__nll_diff";
