* make a header file cls_limits.hpp; important for doxygen documentation of cls_limits  * re-view documentation of cls_limits; make implementation and documentation consistent ;-)  * added example for cls_limits using 'lhc'-like test statistic calculation

--- a/examples/gaussoverflat-cls.cfg
+++ b/examples/gaussoverflat-cls.cfg
@@ -1,8 +1,10 @@
 @include "gaussoverflat-include.cfg"
 
-// the recommended test statistic producer for CLs upper limits for now is
+// As test statistic for CLs, you can use a likelihood ratio produced by
 // deltanll_hypotest where the background-only-distributions fixes the signal to zero
 // and signal-plus-background either uses a flat prior.
+//
+// For another test statistic, see gaussoverflat-cls2.cfg
 deltanll = {
     type = "deltanll_hypotest";
     name = "deltanll";
@@ -50,7 +52,7 @@ main = {
     
     // for debugging only. Not really needed in case everything is Ok. If something fails, please include
     // the debug log in you error report to the developer:
-    debuglog = "debug-gaussoverflat-cls.txt";
+    //debuglog = "debug-gaussoverflat-cls.txt";
 };
 
 options = {
