--- a/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
+++ b/test/test-stat/counting-fixedbkg-mcmc_quant.cfg
@@ -5,7 +5,10 @@ mcmc = {
     name = "mcmc";
     parameter = "Theta";
     quantiles = [0.5, 0.16, 0.84, 0.95];
-    iterations = 10000;
+    iterations = 20000;
+    rnd_gen = {
+       seed = 1;
+    };
 };
 
 options = {
