--- a/Makefile.rules
+++ b/Makefile.rules
@@ -99,9 +99,9 @@ FLAGSCPP := $(FLAGSC) -Wctor-dtor-privacy -Wnon-virtual-dtor -Woverloaded-virtua
 
 #lazy evaluation because of $@, $+.
 COMPILE = echo creating $@; $(CXX) -c $(EXTRA_COMPILE)
-LINK_EXE = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib $(LIBS) $(SQLITE_LIBS) $(BOOST_LIBS)
-LINK_EXE_NOLIBS = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib
-LINK_SO = echo linking $@; $(CXX) -o $@ $+ $(OPTIONS_LDFLAGS) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(BOOST_LIBS)
+LINK_EXE = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib $(LIBS) $(SQLITE_LIBS) $(BOOST_LIBS)
+LINK_EXE_NOLIBS = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_EXE) -Wl,-R,'$$ORIGIN/../lib' -rdynamic -L../lib
+LINK_SO = echo linking $@; $(CXX) -O3 -o $@ $+ $(OPTIONS_LDFLAGS_SO) -Wl,-R,'$$ORIGIN/../lib' -shared -rdynamic $(BOOST_LIBS)
 
 .bin/%.o: %.cpp
 	@$(COMPILE) $(FLAGSCPP) -o $@ $<
