cls limits update to make toys for expected

--- a/examples/gaussoverflat-cls2.cfg
+++ b/examples/gaussoverflat-cls2.cfg
@@ -32,7 +32,11 @@ main = {
     minimizer = "@myminuit";
     ts_column = "deltanll__nll_diff";
     truth_parameter = "s";
-    // debuglog = "debug-gaussoverflat-cls2.txt";
+    rnd_gen = {
+        seed = 1;
+    };
+    tol_cls = 0.02;
+    debuglog = "debug-gaussoverflat-cls2.txt";
 };
 
 options = {
