* add generate_grid mode to cls_limits  * support for pre-generating grid in theta-auto  * better error messages from sqlite_databae_in

--- a/examples/gaussoverflat-cls.cfg
+++ b/examples/gaussoverflat-cls.cfg
@@ -51,7 +51,7 @@ main = {
     truth_parameter = "s";
     
     // for debugging only. Not really needed in case everything is Ok. If something fails, please include
-    // the debug log in you error report to the developer:
+    // the debug log in your bug report:
     //debuglog = "debug-gaussoverflat-cls.txt";
 };
 
